<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/math_operation"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:textColor="@android:color/white"
        android:gravity="end"
        android:ellipsize="start"
        android:textSize="40sp"
        android:singleLine="true"
       />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:textColor="@android:color/white"
        android:gravity="end"
        android:ellipsize="end"
        android:textSize="30sp"
        android:singleLine="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
            style="@style/NumberButton"
                android:id="@+id/btn_sign"
                android:text="@string/ac"
                />
            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_sign2"
                android:text="@string/left_parenthesis"
                />
            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_sign3"
                android:text="@string/right_parenthesis"
                />
            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_divide"
                android:text="@string/div"
                />


        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                style="@style/ActionButton"
                android:id="@+id/btn_7"
                android:text="@string/_7"
                />
            <TextView
                style="@style/ActionButton"
                android:id="@+id/btn_8"
                android:text="@string/_8"
                />
            <TextView
                style="@style/ActionButton"
                android:id="@+id/btn_9"
                android:text="@string/_9"
                />
            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_multiply"
                android:text="@string/multiply"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                style="@style/ActionButton"
                android:id="@+id/btn_4"
                android:text="@string/_4"
                />
            <TextView
                style="@style/ActionButton"
                android:id="@+id/btn_5"
                android:text="@string/_5"
                />
            <TextView
                style="@style/ActionButton"
                android:id="@+id/btn_6"
                android:text="@string/_6"
                />
            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_minus"
                android:text="@string/minus"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                style="@style/ActionButton"
                android:id="@+id/btn_1"
                android:text="@string/_1"
                />
            <TextView
                style="@style/ActionButton"
                android:id="@+id/btn_2"
                android:text="@string/_2"
                />
            <TextView
                style="@style/ActionButton"
                android:id="@+id/btn_3"
                android:text="@string/_3"
                />
            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_plus"
                android:text="@string/plus"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                style="@style/ActionButton"
                android:id="@+id/btn_sign1"
                android:text="@string/point"
                />
            <TextView
                style="@style/ActionButton"
                android:id="@+id/btn_0"
                android:text="@string/_0"
                />
            <TextView
                style="@style/ActionButton"
                android:id="@+id/btn_back"
                android:text="@string/back"
                />
            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_eq"
                android:text="@string/equal"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>